"""aoc23cpp"""
module(name = "aoc23cpp", version = "0.0")

bazel_dep(name = "abseil-cpp", version = "20230802.0")
bazel_dep(name = "toolchains_llvm", version = "0.10.3")

bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
    commit = "eac41eefb5c19d9a2d2bcdd60d6989660288333d",
)

llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
llvm.toolchain(
    llvm_version = "15.0.6",
    cxx_standard = {"": "c++20"},
)

use_repo(llvm, "llvm_toolchain")

register_toolchains("@llvm_toolchain//:all")